--- a/index.html
+++ b/index.html
@@ -8,26 +8,31 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" href="dist/css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 	</head>
 	<body>
-		
-		<div class="slideshow slideshow1">
-			<img src="dist/img/groot.jpg" alt="groot image" class="slide active">
-			<img src="dist/img/groot2.jpg" alt="groot image" class="slide ">
-			<img src="dist/img/groot3.png" alt="groot image" class="slide ">
-			<img src="dist/img/groot4.png" alt="groot image" class="slide ">
+		<header>
+			<h1>I AM GROOT!</h1>
+		</header>
+		<div class="wrapper">
+			<div class="slideshow slideshow1">
+				<img src="dist/img/groot.jpg" alt="groot image" class="slide active">
+				<img src="dist/img/groot2.jpg" alt="groot image" class="slide ">
+				<img src="dist/img/groot3.png" alt="groot image" class="slide ">
+				<img src="dist/img/groot4.png" alt="groot image" class="slide ">
+			</div>
+			<div class="buttons">
+				<button class="prev">Previous</button>
+				<button class="stop">Stop</button>
+				<button class="play">Play</button>
+				<button class="next">Next</button>
+				<br>
+				<button class="jump0">Jump to slide 1</button>
+				<button class="jump1">Jump to slide 2</button>
+				<button class="jump2">Jump to slide 3</button>
+				<button class="jump3">Jump to slide 4</button>
+			</div>	
 		</div>
-
-		<button class="prev">Previous</button>
-		<button class="stop">Stop</button>
-		<button class="play">Play</button>
-		<button class="next">Next</button>
-		<br>
-		<button class="jump0">Jump to slide 0</button>
-		<button class="jump1">Jump to slide 1</button>
-		<button class="jump2">Jump to slide 2</button>
-		<button class="jump3">Jump to slide 3</button>
-
 		<script src="dist/js/main.js"></script>
 
 		<script>
