--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			<div class="buttons">
 				<button class="prev">Previous</button>
 				<button class="stop">Stop</button>
-				<button class="play">Play</button>
+				<button class="start">Play</button>
 				<button class="next">Next</button>
-				<br>
+				</br>
 				<button class="jump0">Jump to slide 1</button>
 				<button class="jump1">Jump to slide 2</button>
 				<button class="jump2">Jump to slide 3</button>
@@ -36,7 +36,7 @@
 		<script src="dist/js/main.js"></script>
 
 		<script>
-			let mySlideshow1 = slideshow(3000, ".slideshow1")
+			let mySlideshow1 = slideshow(1000, ".slideshow1")
 			
 			document.querySelector(".prev").onclick = function() {
 				mySlideshow1.prev()
